se agrego paisaje

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>MI PRIMER PROYECTO</h1>
+    <div class="container">
+      <div class="sun-container">
+        <div class="circle-sun"></div>
+        <div class="ray ray1"></div>
+        <div class="ray ray2"></div>
+        <div class="ray ray3"></div>
+      </div>
+
+      <div class="sun-container sun2">
+        <div class="circle-sun"></div>
+        <div class="ray ray1"></div>
+        <div class="ray ray2"></div>
+        <div class="ray ray3"></div>
+      </div>
+    </div>
   </body>
 </html>
